# aws-boto-multiregion-client

./: README.md  botocove_test.py  dump_operation_members.py  multiregion_client.py  pyproject.toml
