[tool.poetry]
name = "aws-boto-multiregion-client"
version = "0.1.0"
description = "A boto3 client that queries multiple regions in a single method call"
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]

[tool.poetry.dependencies]
python = "^3.8"
botocove = "^1.3.0"
boto3 = "^1.18.39"

[tool.poetry.dev-dependencies]
ipython = "^7.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
